Adjustment for body height to display correctly on tablet portrait view

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,7 +34,7 @@ body {
    display: flex;
    justify-content:center;
    align-items: center;
-   height: 100%;
+   height: 100vh;
    min-height: 100%;
    margin: 25px 0;
    background-color: #393939;
